# mem-markers

./: Cargo.toml  README.md
.github/workflows/: build.yml
crates/macros/: Cargo.toml
crates/macros/src/: as_bytes.rs  byte_complete.rs  fixed_layout.rs  from_bytes.rs  invariant_free.rs  lib.rs  no_uninit.rs  utils.rs  zeroable.rs
crates/macros/tests/: diagnostics.rs
crates/macros/tests/fail/: enum.rs  field-not-fixed-layout.stderr  not-repr-c.stderr  union.rs  union.stderr
crates/macros/tests/fail/byte-complete/: field-not-fixed-layout.rs  field-not-fixed-layout.stderr
crates/macros/tests/fail/fixed-layout/: enum.rs  enum.stderr  field-not-fixed-layout.rs  field-not-fixed-layout.stderr  lifetitme.rs  lifetitme.stderr  non-sized-fixed-layout.rs  non-sized-fixed-layout.stderr  not-repr-c.rs  not-repr-c.stderr  union.rs  union.stderr
crates/macros/tests/fail/from-bytes/: not_fixed_layout.rs  not_fixed_layout.stderr
crates/macros/tests/fail/from_bytes/: not_fixed_layout.rs
crates/macros/tests/fail/no-uninit/: padding.rs  padding.stderr
crates/macros/tests/pass/: named_fields.rs  no_fields.rs  tuple_struct.rs
crates/macros/tests/pass/as-bytes/: struct.rs
crates/macros/tests/pass/fixed-layout/: named_fields.rs  no_fields.rs  tuple_struct.rs
crates/macros/tests/pass/from_bytes/: struct.rs
crates/macros/tests/pass/no-uninit/: struct.rs
crates/macros/tests/ui/: example.rs  example.stderr
src/: as_bytes.rs  byte_complete.rs  fixed_layout.rs  from_bytes.rs  invariant_free.rs  lib.rs  no_uninit.rs  zeroable.rs
